@startuml

title __HOLES's Class Diagram__\n

  namespace  {
    namespace okoban {
      namespace objects {
        namespace holes {
          class sokoban.objects.holes.CircleHole {
              {static} - defaultTexture : int
              + CircleHole()
              + CircleHole()
              + isMovable()
              + isSteppable()
              + objectName()
              + typeOfObject()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace okoban {
      namespace objects {
        namespace holes {
          class sokoban.objects.holes.SquareHole {
              {static} - defaultTexture : int
              + SquareHole()
              + SquareHole()
              + isMovable()
              + isSteppable()
              + objectName()
              + typeOfObject()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace okoban {
      namespace objects {
        namespace holes {
          class sokoban.objects.holes.StarHole {
              {static} - defaultTexture : int
              + StarHole()
              + StarHole()
              + isMovable()
              + isSteppable()
              + objectName()
              + typeOfObject()
          }
        }
      }
    }
  }
  

  sokoban.objects.holes.CircleHole -up-|> sokoban.objects.CusObj
  sokoban.objects.holes.SquareHole -up-|> sokoban.objects.CusObj
  sokoban.objects.holes.StarHole -up-|> sokoban.objects.CusObj


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
